# varetis

./: LICENSE  Pipfile  main.py  pyproject.toml
src/scrawlers/items/: __init__.py  fiis.py
src/scrawlers/pipelines/: __init__.py  json_writer.py
src/scrawlers/spiders/: __init__.py  funds_explorer.py
src/utils/: __init__.py  logger.py
