[tool.poetry]
name = "varetis"
version = "0.1.0"
description = ""
authors = ["Gustavo Pedroni"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
Scrapy = "^2.4.1"
mongoengine = "^0.22.1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
ipython = "5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
